<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="@dimen/cardview_default_radius"
    card_view:cardElevation="@dimen/cardview_default_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="horizontal"
            android:padding="@dimen/xyz_cardview_content_margin">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/card_network_title_bubble" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_network"
                    android:textSize="14sp" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="다운로드 속도를 측정합니다."
                    android:textColor="@color/secondary_text"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/network_speed"
            style="@style/TextAppearance.AppCompat.Display2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/placeholder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <Button
                android:id="@+id/button_network_start_download"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/button_network_start_download" />

            <Button
                android:id="@+id/button_network_stop_download"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_network_stop_download" />

        </LinearLayout>

        <com.daimajia.numberprogressbar.NumberProgressBar
            android:id="@+id/network_download_progress_bar"
            style="@style/NumberProgressBar_Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/network_status"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:text="@string/placeholder" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_network_query_download_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_network_query_download_status"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_network_show_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_network_show_download"
            android:visibility="gone" />

        <TextView
            android:id="@+id/title_network_download_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_network_download_status"
            android:visibility="gone" />

        <TextView
            android:id="@+id/network_download_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:visibility="gone" />
    </LinearLayout>

</android.support.v7.widget.CardView>